@@ -403,7 +403,7 @@ implements ILifecycle, IValidatingTextField
 	}
 
 	private static final String SELECTED_ATTRIBUTE_NAME = 
-		"com.primix.tapestry.component.validating.SelectedFieldSet";
+		"com.primix.tapestry.component.html.valid.SelectedFieldSet";
 
 	/**
 	*  Creates JavaScript to set the cursor on the first required or error
